Fixes title and subtitle.

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://djdestasio.github.com
 title: Life and Dev
-subtitle: The bits that
+subtitle: ...and the bits between
 author: Dominick J. DeStasio
 simple_search: http://google.com/search
 description:
