More work to implement foundation.
This commit makes several improvements to the foundation setup.

- Adds list of recent posts to the top-bar and off canvas menu
- Adds social networking icons and gets rid of cluttered asides
- Adds foundation icons to the site
- Minor tweaks and enhancements to the layout.

--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,8 @@ titlecase: true       # Converts page and post titles to titlecase
 
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
-default_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html]
+#default_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html, custom/asides/social.html]
+default_asides: [custom/asides/social.html]
 
 # Each layout uses the default asides, but they can have their own asides instead. Simply uncomment the lines below
 # and add an array with the asides you want to use.
@@ -85,9 +86,13 @@ google_plus_one_size: medium
 googleplus_user: 105185216748799873460
 googleplus_hidden: false
 
+linkedin_user: djdestasio
+
 # Pinboard
 pinboard_user:
 pinboard_count: 3
+
+email_address: djdestasio11@gmail.com
 
 # Delicious
 delicious_user:
